fix bug flex on safari

--- a/src/app/common/signin/signin.less
+++ b/src/app/common/signin/signin.less
@@ -17,7 +17,7 @@
   form {
     width: 35%;
     .md-button {
-      border: .5px solid @white;
+      border: 1px solid @white;
       border-radius: 5px;
     }
     .forgot {
